@@ -403,10 +403,7 @@ void alter_format()
   else if (tok.is_newline() || tok.is_eof())
     warning(WARN_MISSING, "missing register format");
   else
-    if (!cscntrl(c))
-      error("invalid register format '%1'", c);
-    else
-      error("invalid register format (got %1)", tok.description());
+    error("invalid register format (got %1)", tok.description());
   skip_line();
 }
 
